[FIX] account_followup: fix style on followup partner view
The send button wasn't align with the overdue Invoices above, now he is.

task-4582381

closes odoo/odoo#198529

Related: odoo/enterprise#79446

--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -184,9 +184,6 @@
             .o_field_many2one_selection {
                 width: 100% !important;
             }
-            .fb-mincontent {
-                flex-basis: min-content !important;
-            }
         }
     }
 
